<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vigo</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="app_name_caps">VIGO</string>
    <string name="login_button_text">LOG IN with my current Vigo</string>
    <string name="setup_button_text">SET UP my new Vigo</string>
    <string name="want_button_text">I don\'t have a Vigo (but I want one)</string>
    <string name="search_textview_text">Scanning for device...</string>
    <string name="search_instruction_textview_text">Press and hold the &quot;ON&quot; button</string>
    <string name="next_button_text">Next</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="signup_text">Sign Up for Vigo</string>
    <string name="forgot_text">Forgot Password</string>
    <string name="log_in_text">Log In</string>
    <string name="calibration_title">Calibrating</string>
    <string name="calibration_proceed">Next</string>
    <string name="title_activity_vigo_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_drawer">Open Nav Drawer</string>
    <string name="close_drawer">Close Nav Drawer</string>
    <string name="new_event_message">New Event</string>
    <string name="login_title_text">Log In To Vigo</string>

    <string-array name="drawer_items">
        <item>Today</item>
        <item>History</item>
        <item>Calibrate</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About</item>
    </string-array>

    <string name="title_activity_request_data">RequestDataActivity</string>
    <string name="log_state_box">log_state</string>
    <string name="log_prox_1_box">log_prox_1</string>
    <string name="log_prox_2_box">log_prox_2</string>
    <string name="log_prox_3_box">log_prox_3</string>
    <string name="log_ambient_box">log_ambient</string>
    <string name="log_yaw_box">log_yaw</string>
    <string name="log_pitch_box">log_pitch</string>
    <string name="log_roll_box">log_roll</string>
    <string name="log_totalblinks_box">log_totalblinks</string>
    <string name="log_avgbpm_box">log_avgbpm</string>
    <string name="log_avgblinkduration_box">log_avgblinkduration</string>
    <string name="log_recentblinkduration_box">log_recentblinkduration</string>
    <string name="log_avg_box">log_avg</string>
    <string name="log_perclos_box">log_perclos</string>
    <string name="log_idletime_box">log_idletime</string>
    <string name="log_headtilt_box">log_headtilt</string>
    <string name="log_data_text">Which of the following data would you like to log to a text file?</string>
    <string name="log_data_button">Log Data</string>
    <string name="ble_not_supported">BLE is not supported (debug)</string>

</resources>
