<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/marg_lg" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name_caps"
        android:textSize="70sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/login_button_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/setup_button_container"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10" >

            <Button
                android:id="@+id/login_button"
                style="@style/SleekButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/login_button_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setup_button_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/want_button_container"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10" >

            <Button
                android:id="@+id/setup_button"
                style="@style/SleekButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/setup_button_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/want_button_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:weightSum="10" >

            <Button
                android:id="@+id/want_button"
                style="@style/SleekButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/want_button_text" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>