<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/marg_lg"
    android:paddingLeft="@dimen/marg_md"
    android:paddingRight="@dimen/marg_md"
    android:paddingTop="@dimen/marg_lg" >

    <TextView
        android:id="@+id/search_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/search_textview_text"
        android:textSize="20sp" />

    <!-- Required ListView for SearchActivity extends ListActivity -->

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_title_text" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/login_button_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/next_button_container"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10" >

            <TextView
                android:id="@+id/search_instruction_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_instruction_textview_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/next_button_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/marg_md"
            android:weightSum="10" >

            <Button
                android:id="@+id/search_next_button"
                style="@style/SleekButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/next_button_text" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>